# utils/_swaggerApi.json
@@ -407,7 +407,7 @@
           }
         ],
         "responses": {
-          "204": {
+          "200": {
             "description": "Array of Strings - reccipes",
             "content": {
               "application/json": {
@@ -464,7 +464,222 @@
                     "flattenedResult": {
                       "type": "array",
                       "items": {
-                        "type": "object"
+                        "type": "object",
+                        "example": {
+                          "id": "640cd5ac2d9fecf12e8897fc",
+                          "title": "Spaghetti Bolognese",
+                          "category": "Beef",
+                          "area": "Italian,",
+                          "instructions": "Put the onion and oil in a large pan and fry over a fairly high heat for 3-4 mins...",
+                          "thumb": "https://www.themealdb.com/images/media/meals/sutysw1468247559.jpg",
+                          "preview": "https://res.cloudinary.com/ddbvbv5sp/image/upload/v1678560401/huqdxgwkvbhsfjqtexsm.jpg",
+                          "time": 45,
+                          "youtube": "https://www.youtube.com/watch?v=-gF8d-fitkU",
+                          "tasgs": [
+                            "Pasta",
+                            "Meat"
+                          ],
+                          "ingredients": [
+                            {
+                              "measure": "2",
+                              "id": "640c2dd963a319ea671e372e"
+                            }
+                          ]
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/recipes/category/{category}": {
+      "get": {
+        "summary": "Get a list of recipes by category",
+        "tags": [
+          "Receipes"
+        ],
+        "description": "received an 4 receipes data for 4 categories",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "category",
+            "in": "path",
+            "required": true,
+            "description": "user id",
+            "schema": {
+              "type": "string",
+              "example": "Chicken"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Array of Strings - reccipes",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "success"
+                    },
+                    "code": {
+                      "type": "number",
+                      "example": 200
+                    },
+                    "flattenedResult": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "example": {
+                          "id": "640cd5ac2d9fecf12e8897fc",
+                          "title": "Spaghetti Bolognese",
+                          "category": "Beef",
+                          "area": "Italian,",
+                          "instructions": "Put the onion and oil in a large pan and fry over a fairly high heat for 3-4 mins...",
+                          "thumb": "https://www.themealdb.com/images/media/meals/sutysw1468247559.jpg",
+                          "preview": "https://res.cloudinary.com/ddbvbv5sp/image/upload/v1678560401/huqdxgwkvbhsfjqtexsm.jpg",
+                          "time": 45,
+                          "youtube": "https://www.youtube.com/watch?v=-gF8d-fitkU",
+                          "tasgs": [
+                            "Pasta",
+                            "Meat"
+                          ],
+                          "ingredients": [
+                            {
+                              "measure": "2",
+                              "id": "640c2dd963a319ea671e372e"
+                            }
+                          ]
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "204": {
+            "description": "when search has no result"
+          }
+        }
+      }
+    },
+    "/api/recipes/id/{id}": {
+      "get": {
+        "summary": "Get a list of recipes",
+        "tags": [
+          "Receipes"
+        ],
+        "description": "received an 4 receipes data for 4 categories",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "user id",
+            "schema": {
+              "type": "string",
+              "example": "640cd5ac2d9fecf12e8897f0"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "collection of reccipes",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "success"
+                    },
+                    "code": {
+                      "type": "number",
+                      "example": 200
+                    },
+                    "flattenedResult": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "example": {
+                          "id": "640cd5ac2d9fecf12e8897fc",
+                          "title": "Spaghetti Bolognese",
+                          "category": "Beef",
+                          "area": "Italian,",
+                          "instructions": "Put the onion and oil in a large pan and fry over a fairly high heat for 3-4 mins...",
+                          "thumb": "https://www.themealdb.com/images/media/meals/sutysw1468247559.jpg",
+                          "preview": "https://res.cloudinary.com/ddbvbv5sp/image/upload/v1678560401/huqdxgwkvbhsfjqtexsm.jpg",
+                          "time": 45,
+                          "youtube": "https://www.youtube.com/watch?v=-gF8d-fitkU",
+                          "tasgs": [
+                            "Pasta",
+                            "Meat"
+                          ],
+                          "ingredients": [
+                            {
+                              "measure": "2",
+                              "id": "640c2dd963a319ea671e372e"
+                            }
+                          ]
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "204": {
+            "description": "when search has no result"
+          }
+        }
+      }
+    },
+    "/api/recipes/popular-recipe": {
+      "get": {
+        "summary": "Get a list of recipes categories",
+        "tags": [
+          "Receipes"
+        ],
+        "description": "received an array of strings",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Array of Strings - reccipes",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "favoriteRecipes": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "example": {
+                          "_id": "640cd5ac2d9fecf12e889817",
+                          "count": 2
+                        }
                       }
                     }
                   }
@@ -596,6 +811,206 @@
                       "items": {
                         "type": "object"
                       }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/ownRecipes": {
+      "get": {
+        "summary": "Get a list of own recipes",
+        "tags": [
+          "Own Receipes"
+        ],
+        "description": "received an array of strings",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "collection of own reccipes",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "success"
+                    },
+                    "code": {
+                      "type": "number",
+                      "example": 200
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "example": {
+                          "id": "640cd5ac2d9fecf12e8897fc",
+                          "title": "Spaghetti Bolognese",
+                          "category": "Beef",
+                          "area": "Italian,",
+                          "instructions": "Put the onion and oil in a large pan and fry over a fairly high heat for 3-4 mins...",
+                          "thumb": "https://www.themealdb.com/images/media/meals/sutysw1468247559.jpg",
+                          "preview": "https://res.cloudinary.com/ddbvbv5sp/image/upload/v1678560401/huqdxgwkvbhsfjqtexsm.jpg",
+                          "time": 45,
+                          "youtube": "https://www.youtube.com/watch?v=-gF8d-fitkU",
+                          "tasgs": [
+                            "Pasta",
+                            "Meat"
+                          ],
+                          "ingredients": [
+                            {
+                              "measure": "2",
+                              "id": "640c2dd963a319ea671e372e"
+                            }
+                          ]
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "when wrong id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "d not found"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/ownRecipes/": {
+      "post": {
+        "summary": "NOT WORK Get an own recipe by id",
+        "tags": [
+          "Own Receipes"
+        ],
+        "description": "received an array of strings",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/Recipe"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Own reccipes",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "success",
+                    "code": 200,
+                    "message": "contact delete",
+                    "data": {
+                      "result": {
+                        "_id": "6440f6d31e3250e37a110af9",
+                        "thumb": "https://res.cloudinary.com/djwzlsgzd/image/upload/v1681979091/recipes/ftxurqsca0fajtvbzrjp.jpg",
+                        "tags": [],
+                        "ingredients": [],
+                        "owner": "643ac8bba08cae793c3b2eed",
+                        "createdAt": "2023-04-20T08:24:51.731Z",
+                        "updatedAt": "2023-04-20T08:24:51.731Z"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/ownRecipes/{id}": {
+      "delete": {
+        "summary": "Get an own recipe by id",
+        "tags": [
+          "Own Receipes"
+        ],
+        "description": "received an array of strings",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "description": "user id",
+            "schema": {
+              "type": "string",
+              "example": "640cd5ac2d9fecf12e8897f0"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Own reccipes",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "status": "success",
+                    "code": 200,
+                    "message": "contact delete",
+                    "data": {
+                      "result": {
+                        "_id": "6440f6d31e3250e37a110af9",
+                        "thumb": "https://res.cloudinary.com/djwzlsgzd/image/upload/v1681979091/recipes/ftxurqsca0fajtvbzrjp.jpg",
+                        "tags": [],
+                        "ingredients": [],
+                        "owner": "643ac8bba08cae793c3b2eed",
+                        "createdAt": "2023-04-20T08:24:51.731Z",
+                        "updatedAt": "2023-04-20T08:24:51.731Z"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "when wrong id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "d not found"
                     }
                   }
                 }
@@ -915,6 +1330,52 @@
             "required": [
               "true"
             ]
+          }
+        }
+      },
+      "Recipe": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "example": "soup"
+          },
+          "instructios": {
+            "type": "string",
+            "example": "instr example"
+          },
+          "category": {
+            "type": "string",
+            "example": "Beef"
+          },
+          "description": {
+            "type": "string",
+            "example": "descr example"
+          },
+          "thumb": {
+            "type": "string",
+            "example": "thumb example"
+          },
+          "time": {
+            "type": "string",
+            "example": 24
+          },
+          "ingredients": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "example": [
+              "640cd5ac2d9fecf12e889821"
+            ]
+          },
+          "owner": {
+            "type": "string",
+            "example": "643dab0682ade3006f67ecae"
+          },
+          "file": {
+            "type": "string",
+            "format": "binary"
           }
         }
       }
